load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/winapi/*.hpp",
]

cc_library(
    name = "winapi_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _public_hdrs),
    deps = [
        "@boost//libs/config",
    ],
)

cc_library(
    name = "winapi",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [
        ":winapi_internal",
        "@boost//libs/config",
        "@boost//libs/predef",
    ],
)
